--- a/src/AzureDevOps.Web/Views/Home/Index.cshtml
+++ b/src/AzureDevOps.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home AzureDevOps Page";
+    ViewData["Title"] = "Home AzureDevOps 20190306 分享 Page";
 }
 
 <div class="text-center">
